@@ -118,6 +118,14 @@ func int B_AssessEnemy()
 				};
 			};
 		};
+		
+		if (Hlp_GetInstanceID(self) == Hlp_GetInstanceID(Mod_1106_EBR_Bartholo_MT))
+		&& (Npc_IsPlayer(other))
+		&& (playerIsTransformed)
+		&& ((Mod_IsFleischwanze == 1)
+		|| (Mod_IsRabbit == 1)) {
+			return false;
+		};
 	};
 
 	if (CurrentLevel == NEWWORLD_ZEN)
